2008-03-23  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (compras_win): Commented all the old code. Added the
	use of GtkBuilder to build the gui.
	(on_barcode_entry_activate|on_buy_barcode_entry_activate): Added
	functions. Doesn't do anything yet

	* config_file.c (rizoma_get_value): Changed the return and input
	types from char * to gchar *.
	Deleted all the tabs and re-indent.

	* Makefile.am (bin_PROGRAMS): Eliminated the creation of
	rizoma-admin while we finish the creation of rizoma-compras.

	* ventas.c (main): Changed the type of *argv[] to **argv. Just style.
	(main): Deleted the code that get the screen size.
	Deleted gint screen_width and gint screen_height.

2006-07-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (SearchBarcodeProduct): No nothing is showed if the
	user hasn't put information to search. We prevent large search on
	DB and information not requested.

2006-06-28  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CalcularPrecioFinal): Added a consideration of have
	no IVA on all the conditionals.

	* postgres-functions.c (SaveBuyProducts): Added 'if
	(products->product->iva != -1)' to prevent the calc of IVA when
	this isn't set it.

2006-06-18  Jonathan Gonzalez V.  <zeus@gnu.org>

	* main.c (main): Modified the ask password window, added a lock
	icon and re-ordered the entry for user and password.

2006-06-03  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (main): Enable the cancel button on all the
	pages of the druid.

2006-06-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* config_file.c (rizoma_read_conf): Fixed the bug produced when
	the config file contained a blank line or a line started with #.

2006-05-31  Jonathan Gonzalez V.  <zeus@gnu.org>

	* proveedores.c (proveedores_box): Fill with more data the
	TreeView listing the suppliers.
	(ModificarProveedor): Fixed the warning produced by the value
	returned by gtk_entry_get_text () (const gchar *), used a cast.